[metadata]
name = lauepy-jacione
version = 0.0.1
author = Nick Porter
author_email = jacioneportier@gmail.com
description = Python package for Laue analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacione/lauepy
project_urls =
    Bug Tracker = https://github.com/jacione/lauepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src