[metadata]
name = lauepyjacione
version = 0.0.1
author = Nick Porter, Ross Harder, Yueheng Zhang, Matt Wilkin
author_email = jacioneportier@gmail.com
description = Python package for Laue analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacione/lauepy
project_urls =
    Bug Tracker = https://github.com/jacione/lauepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL v3.0
    Operating System :: Linux

[options]
package_dir =
    = lauepy
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.21
    scipy >= 1.7
    scikit-image >= 0.19
    pandas >= 1.3
    matplotlib >= 3.5
    tensorflow >= 2.7
    pyyaml >= 6.0
    h5py
    periodictable
    xrayutilities
    tifffile
    progressbar2
    click

[options.packages.find]
where = lauepy
include =
    laue
    hexomap
    rxlibs
    scripts
